# Timely

./: README.md
backend/api/: README.md
backend/api/auth/: Cargo.toml  Dockerfile  Makefile  README.md
backend/api/auth/src/: main.rs
backend/api/bruno/Timely/: Update preferences.bru  Update work week.bru  bruno.json
backend/api/database/: Cargo.toml  README.md
backend/api/database/.sqlx/: query-ca8b01c6407a450d2347d588b012e2e6fca92fc84605c28c3437da838bfbb650.json
backend/api/database/src/: main.rs
backend/api/hello-world/: Dockerfile  Makefile
backend/api/proxy/: Dockerfile  Makefile  README.md  bun.lockb  index.html  index.ts  package.json
backend/database/: README.md  Timely data.sql
docs/: Plan.md  README.md  Underveis.md  User-guide.md  lenker.txt
frontend/timeforing-app/: README.md  bun.lockb  index.html  package-lock.json  package.json
frontend/timeforing-app/research_docs/notes/: how to fix word-distance breakdown.md
frontend/timeforing-app/research_docs/word_distance/: Elephant ⇢ relevant.txt  Word distance.txt
frontend/timeforing-app/src/: Home.tsx  functions.ts  index.css  index.tsx
frontend/timeforing-app/src-tauri/: Cargo.toml  tauri.conf.json
frontend/timeforing-app/src-tauri/icons/: icon.icns
frontend/timeforing-app/src-tauri/src/: lib.rs
frontend/timeforing-app/src/api/: firebase.ts
frontend/timeforing-app/src/components/: Button.module.css  Button.tsx  Dropper.module.css  Dropper.tsx  IconButton.tsx  InputField.module.css  InputField.tsx  Navbar.module.css  Navbar.tsx
frontend/timeforing-app/src/pages/: ApiGui.tsx  (+8 more)
(+17 files in other folders)
