[package]
name = "auth_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "1.1", features = ["tokio"] }
ntex-cors = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
oauth2 = "4.0"
google-oauth = "1.10.1"
